# diskspeed

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
src/: main.c  opt.c  opt.h  read.c  read.h  read_test.c  read_test.h  write.c  write.h  write_test.c  write_test.h
